--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "next": "10.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "recharts": "^2.0.9",
+    "swr": "^0.5.4"
   },
   "devDependencies": {
     "@types/node": "^14.14.35",
