--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "format": "prettier --write ./**/*.{js,jsx,ts,tsx,json,css,scss,md}",
+    "format:check": "prettier --check ./**/*.{js,jsx,ts,tsx,json,css,scss,md}"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.8",
@@ -14,6 +16,7 @@
     "@emotion/styled": "^11.1.5",
     "framer-motion": "^4.0.3",
     "next": "10.0.9",
+    "prettier": "^2.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "recharts": "^2.0.9",
